backport branch name

--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -15,8 +15,7 @@ jobs:
 
       - name: create pull request
         run:
-          timestamp=$(date +%Y%m%d%H%M%S)
-          gh pr create -B develop -H master --title "backport/$timestamp"
+          gh pr create -B develop -H master --title "backport"
           --body 'Created by Github action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
