--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -14,8 +14,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: create pull request
-        run:
-          gh pr create -B develop -H master --title "backport"
-          --body 'Created by Github action'
+        run: |
+          gh pr create -B develop -H master --title "backport" --body "
+          # Backport Pull Request
+          This is a backport pull request to sync \`develop\` with \`master\`.
+          [this is a link](https://github.com/peter-evans/create-pull-request
+          /blob/main/docs/concepts-guidelines.md#triggering-further-workflow-runs)
+          "
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
