--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -43,7 +43,7 @@ jobs:
               echo "Hotfix branch must target master"
               exit 1
             fi
-          elif [[ "$branch_name" != master ]]; then
+          elif [[ "$branch_name" =~ master ]]; then
             echo "Backport detected"
           else
             echo "Invalid branch name"
