--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -18,8 +18,8 @@ jobs:
           gh pr create -B develop -H master --title "backport" --body "
           # Backport Pull Request
           This is a backport pull request to sync \`develop\` with \`master\`.
-          [this is a link](https://github.com/peter-evans/create-pull-request
-          /blob/main/docs/concepts-guidelines.md#triggering-further-workflow-runs)
+          Close and reopen the pr to run the actions:
+          https://github.com/peter-evans/create-pull-request
           "
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
