--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -14,12 +14,20 @@ jobs:
         uses: actions/checkout@v2
 
       - name: create pull request
-        run: |
-          gh pr create -B develop -H master --title "backport" --body "
-          # Backport Pull Request
-          This is a backport pull request to sync \`develop\` with \`master\`.
-          Close and reopen the pr to run the actions:
-          https://github.com/peter-evans/create-pull-request
-          "
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: cpr
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          base: develop
+          head: master
+          title: "backport"
+          body: "# Backport Pull Request\nThis is a backport pull request
+          to sync `develop` with `master`."
+          draft: false
+          labels: "backport"
+          commit-message: "Sync `develop` with `master`"
+          auto-merge: true
+
+      - name: Check output
+        run: echo "Pull Request Number
+          - ${{ steps.cpr.outputs.pull-request-number }}"
