--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -20,8 +20,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           base: develop
           title: "backport"
-          body: "# Backport Pull Request\nThis
-          is a backport pull request to sync `develop` with `master`."
+          body: "# Backport Pull Request\nThis is a backport
+           pull request to sync `develop` with `master`."
           draft: false
           labels: "backport"
           commit-message: "Sync `develop` with `master`"
