--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -14,26 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: create pull request
-        run: |
-          gh pr create -B develop -H master --title "backport"
-          --body 'Created by Github action'
+        run: gh pr create -B develop -H master
+          --title "backport" --body 'Created by Github action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  sync:
-    needs: backport
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Configure Git
-        run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
-
-      - name: Merge develop into master
-        run: |
-          git checkout master
-          git merge --no-ff --no-edit develop
-          git push origin master
