--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,5 +1,4 @@
----
-name: backport
+name: Sync develop with master
 
 on:
   push:
@@ -7,14 +6,21 @@ on:
       - master
 
 jobs:
-  backport:
+  sync:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-      - name: create pull request
-        run: gh pr create -B develop -H master
-          --title "backport" --body 'Created by Github action'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Configure Git
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+
+      - name: Rebase develop onto master
+        run: |
+          git checkout develop
+          git rebase master
+          git push origin develop --force
