--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,26 +1,26 @@
-#name: Sync develop with master
-#
-#on:
-#  push:
-#    branches:
-#      - master
-#
-#jobs:
-#  sync:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Configure Git
-#        run: |
-#          git config --global user.name 'GitHub Actions'
-#          git config --global user.email 'actions@github.com'
-#
-#      - name: Rebase develop onto master
-#        run: |
-#          git checkout develop
-#          git rebase master
-#          git push origin develop --force
+name: Sync develop with master
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+
+      - name: Rebase develop onto master
+        run: |
+          git checkout develop
+          git rebase master
+          git push origin develop --force
