--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -19,8 +19,17 @@ jobs:
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
 
-      - name: Rebase develop onto master
+      - name: Create a new branch with timestamp
+        run: |
+          TIMESTAMP=$(date +%Y%m%d%H%M%S)
+          git checkout -b backport/$TIMESTAMP
+
+      - name: Rebase master onto backport branch
+        run: |
+          git rebase master
+
+      - name: Checkout develop and merge backport branch into develop
         run: |
           git checkout develop
-          git rebase master
-          git push origin develop --force
+          git merge --no-ff backport/$TIMESTAMP
+          git push origin develop
