--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Checkout develop and merge backport branch into develop
         run: |
           git checkout develop
-          git merge --no-ff backport/$TIMESTAMP
+          git merge --no-ff backport
           git push origin develop
