--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,3 +1,5 @@
+---
+
 name: Sync develop with master
 
 on:
@@ -19,16 +21,30 @@ jobs:
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
 
-      - name: Create a new branch
+      - name: Create a new branch with timestamp
         run: |
           git checkout -b backport
 
-      - name: Rebase master onto backport branch
+      - name: Push the new branch
         run: |
-          git rebase master
+          git push origin backport
 
-      - name: Checkout develop and merge backport branch into develop
-        run: |
-          git checkout develop
-          git merge --no-ff backport
-          git push origin develop
+      - name: Create Pull Request
+        uses: repo-sync/pull-request@v2
+        with:
+          source_branch: "backport"
+          destination_branch: "develop"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Sync develop with master"
+          pr_body: "Update develop with the latest changes from master."
+
+      - name: Merge Pull Request
+        uses: pascalgn/automerge-action@v0.13.0
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: "automerge,!work in progress"
+          MERGE_METHOD: "merge"
+          MERGE_COMMIT_MESSAGE: "Merge pull request ({{pullRequest.number}})
+           for ({{pullRequest.title}})"
+          MERGE_FORKS: "false"
+          UPDATE_LABELS: ""
