--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,5 +1,5 @@
 ---
-name: PR on release/hotfix branches
+name: Creating release/hotfix tag
 
 on:
   pull_request:
@@ -14,12 +14,3 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Bump version and push tag
-        id: bump_version
-        uses: mathieudutour/github-tag-action@v5.6
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: prerelease
-          tag_prefix: ""
-          release_branches: release/*,hotfix/*
-          pre_release: true
