--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - name: Validate branch name
         run: |
           branch_name="${{ github.head_ref }}"
@@ -50,8 +53,14 @@ jobs:
             exit 1
           fi
         shell: bash
-  create_and_increment_tag:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+
+      - name: Extract version from branch name
+        id: extract_version
+        run: |
+          branch_name="${{ github.head_ref }}"
+          version_pattern="release/(.*)"
+          if [[ "$branch_name" =~ $version_pattern ]]; then
+            version="${BASH_REMATCH[1]}"
+            echo "::set-output name=version::$version-rc-0"
+          fi
+        shell: bash
