--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,4 @@ spring:
   application:
     name: event-platform-api
   profiles:
-    active: local
-#    active: ${PROFILE}
+    active: ${PROFILE}
