--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,15 +26,8 @@ jobs:
 
           release_pattern="^(release)/[0-9]+.[0-9]+.[0-9]+$"
           hotfix_pattern="^(hotfix)/[0-9]+.[0-9]+.[0-9]+$"
-          feature_pattern="^(feature)/([a-zA-Z0-9-]+)$"
 
-          if [[ "$branch_name" =~ $feature_pattern ]]; then
-            echo "Feature branch detected"
-            if [[ "$target_branch_name" != "develop" ]]; then
-              echo "Feature branch must target develop"
-              exit 1
-            fi
-          elif [[ "$branch_name" =~ $release_pattern ]]; then
+          if [[ "$branch_name" =~ $release_pattern ]]; then
             echo "Release branch detected"
             if [[ "$target_branch_name" != "master" ]]; then
               echo "Release branch must target master"
@@ -46,8 +39,6 @@ jobs:
               echo "Hotfix branch must target master"
               exit 1
             fi
-          elif [[ "$branch_name" =~ backport ]]; then
-            echo "Backport detected"
           else
             echo "Invalid branch name"
             exit 1
@@ -57,10 +48,6 @@ jobs:
       - name: Extract version from branch name
         id: extract_version
         run: |
-          branch_name="${{ github.head_ref }}"
-          version_pattern="release/(.*)"
-          if [[ "$branch_name" =~ $version_pattern ]]; then
-            version="${BASH_REMATCH[1]}"
-            echo "::set-output name=version::$version-rc-1"
-          fi
+          version="${BASH_REMATCH[1]}"
+          echo "::set-output name=version::$version-rc-1"
         shell: bash
