--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,6 +48,8 @@ jobs:
       - name: Extract version from branch name
         id: extract_version
         run: |
+          branch_name="${{ github.head_ref }}"
+          echo "branch: $branch_name"
           version="${BASH_REMATCH[1]}"
           echo "::set-output name=version::$version-rc-1"
         shell: bash
