--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,33 +45,41 @@ jobs:
           fi
         shell: bash
 
+      - name: Cache RC number
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: ~/.rc_number
+          key: ${{ github.head_ref }}
+
       - name: Extract version from branch name and create rc string
         id: extract_version
         run: |
           branch="${{ github.head_ref }}"
           version=${branch//release\//}
           version=${version//hotfix\//}
+          echo "Version: $version"
 
-          # Get current rc number from environment variable
-          rc_number=${{ env.RC_NUMBER }}
-
-          # If RC_NUMBER is not set, initialize it to 1
-          if [ -z "$rc_number" ]; then
-            rc_number=1
+          # Get current rc number from cache file
+          if [ -f ~/.rc_number ]; then
+            rc_number=$(cat ~/.rc_number)
           else
-            # Increment rc number by 1
-            rc_number=$((rc_number + 1))
+            rc_number=1
           fi
+
+          # Increment rc number by 1
+          rc_number=$((rc_number + 1))
 
           # Create rc string
           rc_string="rc-$rc_number"
+          echo "RC string: $rc_string"
 
           # Set output variables using environment files
           echo "version=$version" >> $GITHUB_ENV
           echo "rc_string=$rc_string" >> $GITHUB_ENV
 
-          # Update RC_NUMBER environment variable
-          echo "RC_NUMBER=$rc_number" >> $GITHUB_ENV
+          # Update RC_NUMBER cache file
+          echo $rc_number > ~/.rc_number
 
           echo "$version-$rc_string"
         shell: bash
