--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -59,4 +59,31 @@ jobs:
           # Create rc string
           rc_string="$version-rc-$timestamp"
           echo "RC version: $rc_string"
+
+          # Set output for the version
+          echo "::set-output name=version::$version"
         shell: bash
+
+      - name: Extract Metadata
+        uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: |
+            ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}
+          tags: |
+            type=semver,pattern=${{ steps.extract_version.outputs.version }}
+
+
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+          logout: true
+
+      - name: Build And Push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
