--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -47,14 +47,14 @@ jobs:
         run: echo "The version is ${{ steps.extract_version.outputs.version }}"
         shell: bash
 
-#      - name: Extract Metadata
-#        uses: docker/metadata-action@v5
-#        id: meta
-#        with:
-#          images: |
-#            ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}
-#          tags: |
-#            type=semver,pattern=${{ steps.extract_version.outputs.version }}
+      - name: Extract Metadata
+        uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: |
+            ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}
+          tags: |
+            type=semver,pattern=${{ steps.extract_version.outputs.version }}
 #
 #
 #      - name: Docker Login
