--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -53,20 +53,17 @@ jobs:
         with:
           images: |
             ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}
-          tags: |
-            type=semver,pattern=${{ steps.extract_version.outputs.version }}
-#
-#
-#      - name: Docker Login
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{secrets.DOCKERHUB_USERNAME}}
-#          password: ${{secrets.DOCKERHUB_TOKEN}}
-#          logout: true
-#
-#      - name: Build And Push
-#        uses: docker/build-push-action@v5
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ steps.meta.outputs.tags }}
+
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+          logout: true
+
+      - name: Build And Push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ ssteps.extract_version.outputs.version }}
