--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -66,4 +66,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ ssteps.extract_version.outputs.version }}
+          tags: ${{ steps.extract_version.outputs.version }}
