--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -43,9 +43,20 @@ jobs:
           echo "::set-output name=version::$rc_string"
         shell: bash
 
-      - name: Use version
-        run: echo "The version is ${{ steps.extract_version.outputs.version }}"
-        shell: bash
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+          cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Generate open api spec
+        run: ./gradlew openApiGenerate
+      - name: Run build
+        run: ./gradlew build
+        env:
+          GPR_USER: ${{ secrets.GPR_USER }}
+          GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
 
       - name: Extract Metadata
         uses: docker/metadata-action@v5
