--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -47,7 +47,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-          cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Generate open api spec
@@ -58,12 +57,8 @@ jobs:
           GPR_USER: ${{ secrets.GPR_USER }}
           GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
 
-      - name: Extract Metadata
-        uses: docker/metadata-action@v5
-        id: meta
-        with:
-          images: |
-            ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Docker Login
         uses: docker/login-action@v2
@@ -72,9 +67,11 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
           logout: true
 
-      - name: Build And Push
-        uses: docker/build-push-action@v5
+      - name: Build and push
+        uses: docker/build-push-action@v2
         with:
           context: .
+          builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ steps.extract_version.outputs.version }}
+          tags: '${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}
+          :${{ steps.extract_version.outputs.version }}'
