--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     rev: v1.30.0
     hooks:
       - id: yamllint
+        args: [--config-data, "{extends: default, rules: {line-length: {max: 120}, truthy: disable}}"]
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.18.0  # Specify the desired version of Gitleaks
     hooks:
