--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -73,5 +73,4 @@ jobs:
           context: .
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: '${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}
-          :${{ steps.extract_version.outputs.version }}'
+          tags: '${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}:${{ steps.extract_version.outputs.version }}'
