--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,33 +15,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Validate branch name
-        run: |
-          branch_name="${{ github.head_ref }}"
-          target_branch_name="${{ github.base_ref }}"
-          echo "branch: $branch_name to target branch: $target_branch_name"
-
-          release_pattern="^(release)/[0-9]+.[0-9]+.[0-9]+$"
-          hotfix_pattern="^(hotfix)/[0-9]+.[0-9]+.[0-9]+$"
-
-          if [[ "$branch_name" =~ $release_pattern ]]; then
-            echo "Release branch detected"
-            if [[ "$target_branch_name" != "master" ]]; then
-              echo "Release branch must target master"
-              exit 1
-            fi
-          elif [[ "$branch_name" =~ $hotfix_pattern ]]; then
-            echo "Hotfix branch detected"
-            if [[ "$target_branch_name" != "master" ]]; then
-              echo "Hotfix branch must target master"
-              exit 1
-            fi
-          else
-            echo "Invalid branch name"
-            exit 1
-          fi
-        shell: bash
-
       - name: Extract version from branch name and create rc string
         id: extract_version
         run: |
@@ -50,5 +23,47 @@ jobs:
           version=${version//hotfix\//}
           echo "Version: $version"
 
-          echo "RC version: $version"
+          # Validate version
+          if [[ ! "$version" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Invalid version: $version"
+            exit 1
+          fi
+          # Create rc string
+          rc_string="$version"
+          echo "Version: $rc_string"
+
+          # Set output for the version
+          echo "::set-output name=version::$rc_string"
         shell: bash
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Generate open api spec
+        run: ./gradlew openApiGenerate
+      - name: Run build
+        run: ./gradlew build
+        env:
+          GPR_USER: ${{ secrets.GPR_USER }}
+          GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+          logout: true
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: '${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DH_REPO_NAME}}:${{ steps.extract_version.outputs.version }}'
