--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -12,7 +13,7 @@ repos:
     rev: v1.30.0
     hooks:
       - id: yamllint
-        args: [--config-data, "{extends: default, rules: {line-length: {max: 120}, truthy: disable}}"]
+        exclude: ^\.github/workflows/.*\.yml$
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.18.0  # Specify the desired version of Gitleaks
     hooks:
