--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -47,15 +47,26 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '17'
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Generate open api spec
         run: ./gradlew openApiGenerate
+
       - name: Run build
         run: ./gradlew build
         env:
           GPR_USER: ${{ secrets.GPR_USER }}
           GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
+
+      - name: Create Tag
+        id: create_tag
+        run: |
+          git tag -a $rc_string -m "version $rc_string"
+
+      - name: Push Tag
+        run: git push origin ${{ steps.create_tag.outputs.version }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
