--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 gradle.properties
-localstack
+local/localstack/storage
+.localstack
 logs
 
 ### STS ###
