--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Create Tag
         id: create_tag
         run: |
-          git tag -a $rc_string -m "version $rc_string"
+          git tag -a ${{ steps.create_tag.outputs.version }} -m "version ${{ steps.create_tag.outputs.version }}"
 
       - name: Push Tag
         run: git push origin ${{ steps.create_tag.outputs.version }}
