--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -62,10 +62,10 @@ jobs:
       - name: Create Tag
         id: create_tag
         run: |
-          git tag -a ${{ steps.create_tag.outputs.version }} -m "version ${{ steps.create_tag.outputs.version }}"
+          git tag -a ${{ steps.extract_version.outputs.version }} -m "version ${{ steps.extract_version.outputs.version }}"
 
       - name: Push Tag
-        run: git push origin ${{ steps.create_tag.outputs.version }}
+        run: git push origin ${{ steps.extract_version.outputs.version }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
