--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,19 @@ jobs:
           GPR_USER: ${{ secrets.GPR_USER }}
           GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
 
+      - name: Configure Git
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+
+      - name: Create Tag
+        id: create_tag
+        run: |
+          git tag -a ${{ steps.extract_version.outputs.version }} -m "version ${{ steps.extract_version.outputs.version }}"
+
+      - name: Push Tag
+        run: git push origin ${{ steps.extract_version.outputs.version }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
