--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     build:
       dockerfile: Dockerfile
-    image: event-platform-api:latest
+    image: kaiqkt/event-platform-api:latest
     environment:
       PROFILE: prod
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/event_platform
